Go to textarea and prepare 2.0 (#320)
migrate to zmd